--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "echonet",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2"
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.ts",
+  "scripts": {
+    "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts"
   },
-  "peerDependencies": {
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "tsc": "^2.0.4"
   }
 }
