--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.7",
     "express": "^4.21.1",
+    "hono": "^4.6.12",
     "tsc": "^2.0.4"
   }
 }
