--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "express": "^4.21.1",
+    "@prisma/client": "^5.22.0",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.12",
+    "prisma": "^5.22.0",
     "tsc": "^2.0.4"
   }
 }
