controller for signup

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -20,8 +21,11 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "hono": "^4.6.12",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.22.0",
     "tsc": "^2.0.4"
   }
