--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "hono": "^4.6.12",
     "prisma": "^5.22.0",
+    "socket.io": "^4.8.1",
     "tsc": "^2.0.4"
   }
 }
