--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
     "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
     "start": "node backend/dist/src/index.js",
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
+    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma",
+    "debug-render": "ls -R /opt/render/project/"
   },
   "keywords": [],
   "author": "",
