--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
     "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
     "start": "node backend/dist/src/index.js",
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma",
-    "debug-render": "ls -R /opt/render/project/"
+    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +15,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.1",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
@@ -24,7 +23,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
