--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
     "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
     "start": "node backend/dist/src/index.js",
+    "check-schema": "ls backend/prisma/schema.prisma",
     "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
   },
   "keywords": [],
