--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-    "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
-    "start": "node backend/dist/src/index.js",
-    "check-schema": "ls backend/prisma/schema.prisma",
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
+    "build": "tsc && npm install && prisma generate --schema=./backend/prisma/schema.prisma && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node backend/dist/src/index.js"
   },
   "keywords": [],
   "author": "",
