--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
     "build": "tsc && prisma generate --schema=backend/prisma/schema.prisma && pnpm install --prefix frontend && pnpm run build --prefix frontend",
     "start": "node backend/dist/src/index.js",
-    "postinstall": "prisma generate --schema=backend/prisma/schema.prisma"
+    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
