--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-    "build": "tsc && prisma generate --schema=backend/prisma/schema.prisma && pnpm install --prefix frontend && pnpm run build --prefix frontend",
-    "start": "node backend/dist/src/index.js",
+    "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
+    "start": "node backend/dist/index.js",
     "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
   },
   "keywords": [],
