--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
     "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
-    "start": "node backend/dist/index.js",
+    "start": "node backend/dist/src/index.js",
     "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
   },
   "keywords": [],
