--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-    "build": "tsc && prisma generate --schema=./backend/prisma/schema.prisma",
-    "start": "node backend/dist/src/index.js",
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
-  },
+		"dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
+		"build": "tsc && pnpm install && prisma generate --schema=./backend/prisma/schema.prisma && pnpm install --prefix frontend && pnpm run build --prefix frontend",
+		"start": "node backend/dist/src/index.js"
+	},
   "keywords": [],
   "author": "",
   "license": "ISC",
