--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,5 @@
 //     "esm": true
 //   },
   "include": ["backend/src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "frontend"]
 }
