--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-		"dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-		"build": "tsc && pnpm install && prisma generate --schema=./backend/prisma/schema.prisma && pnpm install --prefix frontend && pnpm run build --prefix frontend",
-		"start": "node backend/dist/src/index.js"
-	},
+    "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
+    "build": "tsc && pnpm install && prisma generate --schema=./backend/prisma/schema.prisma",
+    "start": "node backend/dist/src/index.js",
+    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
