--- a/package.json
+++ b/package.json
@@ -1,34 +1,17 @@
 {
-  "name": "echonet",
+  "name": "echonet-monorepo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "scripts": {
-    "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-    "build": "tsc && pnpm install && prisma generate --schema=./backend/prisma/schema.prisma",
-    "start": "node backend/dist/src/index.js",
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
+    "dev": "pnpm --parallel --filter \"echonet-*\" run dev",
+    "build": "pnpm --filter echonet-backend run build && pnpm --filter echonet-frontend run build",
+    "start": "pnpm --parallel --filter \"echonet-*\" run start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^22.10.1",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.10",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.13.7",
-    "@prisma/client": "^5.22.0",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.4.5",
-    "hono": "^4.6.12",
-    "prisma": "^5.22.0",
-    "socket.io": "^4.8.1"
+    "concurrently": "^8.0.1"
   }
 }
