--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "echonet-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
  "scripts": {
     "dev": "nodemon --watch src --exec ts-node -r dotenv/config src/index.ts",
     "build": "tsc",
